grammar.js
    source_file: ($) =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_def, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: (_$) => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    comment: (_) =>
      token(
        choice(
          seq("//", /(\\+(.|\r?\n)|[^\\\n])*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
          // nesting comments, we "only" support 5 levels of nesting
          seq(
            "/+",
            repeat(
              choice(
                /[^+]/,
                /\++[^+\/]/,
                seq(
                  "/+",
                  repeat(
                    choice(
                      /[^+]/,
                      /\++[^+\/]/,
                      seq(
                        "/+",
                        repeat(
                          choice(
                            /[^+]/,
                            /\++[^+\/]/,
                            seq(
                              "/+",
                              repeat(
                                choice(
                                  /[^+]/,
                                  /\++[^+\/]/,
                                  seq(
                                    "/+",
                                    repeat(choice(/[^+]/, /\++[^+\/]/)),
                                    /\++\//,
                                  ),
                                ),
                              ),
                              /\++\//,
                            ),
                          ),
                        ),
                        /\++\//,
                      ),
                    ),
                  ),
                  /\++\//,
                ),
              ),
            ),
            /\++\//,
          ),
        ),
      ),

    //
    // Identifier
    //
    identifier: (_$) => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    //
    // Token String
    //
    int: (_$) => token("int"),
    auto: (_$) => token("auto"),
    import: (_$) => token("import"),
    module: (_$) => token("module"),
    module_declaration: ($) =>
      seq(
        // deprecated attribute can only appear once
        repeat($.at_attribute),
        optional(seq($.deprecated_attribute, repeat($.at_attribute))),
        $.module,
        $.module_fqn,
        ";",
      ),

    module_fqn: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    //
    // Import Declarations
    // Note that 'static import' is not provided for here, because it is
    // ambiguous with the attribute_specifiers. Technically we probably
    // prefer the static to be more tightly bound to the import, but for
    // syntax tree analysis it probably does not matter much.
    //
    import_declaration: ($) =>
      seq(repeat($._attribute), $.import, $._import_list, ";"),

    _import_list: ($) =>
      choice(
        seq($.imported, optional(seq(",", $._import_list))),
        seq($.imported, ":", commaSep1($.import_bind)),
      ),

    // libdparse calls this single_import
    import_bind: ($) => seq($.identifier, optional(seq("=", $.identifier))),

    //
    // Mixin Declaration
    //
    _declaration: ($) =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), "{", repeat($._declaration), "}"),
      ),

    variable_declaration: ($) =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.type,
        commaSep1(choice($.declarator, $.bitfield_declarator)),
        ";",
      ),

    declarator: ($) =>
      prec.right(
        seq(
          $.identifier,
          optional(seq(optional($.template_parameters), "=", $._initializer)),
        ),
      ),

    storage_class: ($) =>
      choice(
        $.linkage_attribute,
        $.align_attribute,
        $.at_attribute,
        $.type_ctor,
        $.deprecated,
        $.static,
        $.extern,
        $.abstract,
        $.final,
        $.override,
        $.synchronized,
        $.auto,
        $.scope,
        $.gshared,
        $.ref,
        $._function_attribute_kwd,
      ),

    //
    // Initializers
    //
    _initializer: ($) => prec.left(choice($._non_void_initializer, $.void)),

    auto_declaration: ($) =>
      prec.right(
        seq(
          repeat($._attribute),
          repeat1($.storage_class),
          commaSep1($._auto_assignment),
          ";",
        ),
      ),

    _auto_assignment: ($) =>
      seq(
        field("variable", $.identifier),
        optional($.template_parameters),
        "=",
        field("value", $._initializer),
      ),

    //
    // Alias Declaration
    //
    type: ($) =>
      prec.right(seq(repeat($.type_ctor), $._type2, repeat($._type_suffix))),

    _type2: ($) =>
      prec.right(
        choice(
          $.void,
          $._builtin_type,
          $._qualified_id,
          seq(".", $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, ".", $._qualified_id),
          seq($.type_ctor, "(", $.type, ")"),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    _type_suffix: ($) =>
      prec.right(
        choice(
          "*",
          seq("[", "]"),
          seq("[", $.expression, "]"),
          seq("[", $.expression, "..", $.expression, "]"),
          seq("[", $.type, "]"),
          seq($.delegate, $.parameters, repeat($.member_function_attribute)),
          seq($.function, $.parameters, repeat($._function_attribute)),
        ),
      ),

    deprecated_attribute: ($) =>
      prec.right(seq($.deprecated, optional(seq("(", $.expression, ")")))),

    _attribute: ($) =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_ctor,
          $.private,
          $.package,
          seq($.package, "(", $.module_fqn, ")"),
          $.protected,
          $.public,
          $.export,
          $.static,
          $.extern,
          $.abstract,
          $.final,
          $.override,
          $.synchronized,
          $.auto,
          $.scope,
          $.gshared,
          $.at_attribute,
          $._function_attribute_kwd,
          $.ref,
          $.return,
        ),
      ),

    at_attribute: ($) =>
      prec.right(
        choice(
          seq("@", $.identifier),
          seq("@", $.identifier, $.arguments),
          seq("@", $.template_instance),
          seq("@", $.template_instance, $.arguments),
          seq("@", "(", $._argument_list, ")"),
        ),
      ),

    _function_attribute_kwd: ($) => choice($.nothrow, $.pure),

    _argument_list: ($) => prec.right(commaSep1Comma($.expression)),

    _expr: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $.binary_expression,
          $.ternary_expression,
          $._unary_expr,
        ),
      ),

    binary_expression: ($) =>
      choice(
        $.logical_or_expression,
        $.logical_and_expression,
        $.or_expression,
        $.xor_expression,
        $.and_expression,
        $.equal_expression,
        $.rel_expression,
        $.identity_expression,
        $.add_expression,
        $.mul_expression,
        $.shift_expression,
        $.power_expression,
      ),

    assert_expression: ($) => seq($.assert, "(", $.assert_arguments, ")"),

    string_literal: ($) =>
      choice(
        $._string,
        $.raw_string,
        $.hex_string,
        $.quoted_string,
        $.token_string,
        $.interpolated_raw_string,
        $.interpolated_quoted_string,
        $.interpolated_token_string,
      ),

    _declarations_and_statements: ($) => repeat1($._declaration_or_statement),

    block_statement: ($) =>
      seq(
        "{",
        optional($._declarations_and_statements),
        optional($.label),
        "}",
      ),

    return_statement: ($) => seq($.return, optional($.expression), ";"),

    struct_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.struct, $.aggregate_body), // anonymous struct
          seq($.struct, $.identifier, ";"),
          seq($.struct, $.identifier, $.aggregate_body),
          seq(
            $.struct,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            ";",
          ),
          seq(
            $.struct,
            $.identifier,
            $.template_parameters,
            optional($.constraint),
            $.aggregate_body,
          ),
        ),
      ),

    // AnonStructDeclaration inlined above

    aggregate_body: ($) => seq("{", repeat($._declaration), "}"),

    //
    // Struct Initializer
    //
    // renamed to aggregate initializer, as this is used for
    // all aggregate types (classes, enums, interfaces, structs)
    // also struct_member_initializers is inlined here
    aggregate_initializer: ($) =>
      seq("{", optional(commaSep1Comma($.member_initializer)), "}"),

    // struct_member_initializer shortened to member_initializer
    member_initializer: ($) =>
      seq(optional(seq($.identifier, ":")), $._initializer),

    //
    // Postblit
    //
    parameters: ($) =>
      prec.right(
        choice(
          seq("(", ")"),
          seq("(", commaSep1Comma($.parameter), ")"),
          seq("(", commaSep1($.parameter), ",", $.ellipses, ")"),
          seq(
            "(",
            commaSep1($.parameter),
            ",",
            $._variadic_arguments_attributes,
            $.ellipses,
            ")",
          ),
          seq("(", $.ellipses, ")"),
          seq("(", $._variadic_arguments_attributes, $.ellipses, ")"),
        ),
      ),

    parameter: ($) => prec.right($._parameter),

    _parameter: ($) =>
      prec.right(
        choice(
          seq(repeat($.parameter_attribute), $.type),
          seq(repeat($.parameter_attribute), $.type, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            "=",
            $._expr,
            optional($.ellipses),
          ),
          seq(repeat($.parameter_attribute), $.type, $.identifier),
          seq(repeat($.parameter_attribute), $.type, $.identifier, $.ellipses),
          seq(
            repeat($.parameter_attribute),
            $.type,
            $.identifier,
            "=",
            $._expr,
            optional($.ellipses),
          ),
        ),
      ),

    ellipses: (_$) => "...",

    _variadic_arguments_attributes: ($) =>
      repeat1($.variadic_arguments_attribute),

    _function_attribute: ($) =>
      choice($._function_attribute_kwd, $.at_attribute),

    member_function_attribute: ($) =>
      choice(
        $.const,
        $.immutable,
        $.inout,
        $.return,
        $.scope,
        $.shared,
        $._function_attribute,
      ),

    //
    // Function Body
    //
    function_body: ($) =>
      choice(
        seq(optional($._in_out_contract_expressions), "=>", $._expr, ";"),
        seq(repeat($._function_contract), optional($.do), $.block_statement),
        seq(repeat($._function_contract), ";"),
        seq(repeat($._function_contract), $._in_out_statement),
      ),

    _function_contract: ($) =>
      choice($._in_out_contract_expression, $._in_out_statement),

    _in_out_contract_expressions: ($) => repeat1($._in_out_contract_expression),

    _in_out_statement: ($) => choice($.in_statement, $.out_statement),
