test/corpus/functions.txt
==================
Basic Function
==================

int f() { return 0; }
---
(source_file
    (module
        (func_declaration
            (builtin_type)
            (identifier)
            (parameters)
            (function_body
                (block_statement
                    (return_statement
                        (int_literal)
                    )
                )
            )
        )
    )
)

==================
Single Parameter Function
==================

int f(int c) { return c; }
---
(source_file
    (module
        (func_declaration
            (builtin_type)
            (identifier)
            (parameters
                (parameter (builtin_type) (var_declarator (identifier))))
            (function_body
                (block_statement
                    (return_statement (identifier))))
        )
    )
)

==================
Var Args Parameter Function
==================

int f(int c, ...) { return c; }
---
(source_file
    (module
        (func_declaration
            (builtin_type)
            (identifier)
            (parameters
                (parameter
                    (builtin_type)
                    (var_declarator (identifier))
                )
                (ellipses)
            )
            (function_body
                (block_statement
                    (return_statement
                        (identifier)
                    )
                )
            )
        )
    )
)

==================
Var Args Only Function
==================

int f(...) { return c; }
---
(source_file
    (module
        (func_declaration
            (builtin_type)
            (identifier)
            (parameters
                (ellipses)
            )
            (function_body
                (block_statement
                    (return_statement
                        (identifier)
                    )
                )
            )
        )
    )
)

==================
Var Args Type-Safe Function
==================

int f(int...) { return c; }
---
(source_file (module
    (func_declaration
        (builtin_type)
        (identifier)
        (parameters (parameter (type (builtin_type)) (ellipses)))
        (function_body (block_statement (return_statement (identifier)))))
    )
)

==================
Member Function Attributes
==================

int f(int a, int b) @safe pure @myattr { return a+b; }
---
(source_file
    (module
        (func_declaration
            (builtin_type)
            (identifier)
            (parameters
                (parameter (builtin_type) (var_declarator (identifier)))
                (parameter (builtin_type) (var_declarator (identifier)))
            )
            (member_function_attribute
                (at_attribute (identifier)))
            (member_function_attribute)
            (member_function_attribute
                (at_attribute (identifier)))
            (function_body
                (block_statement
                    (return_statement
                        (binary_expression (identifier) (identifier)))
                )
            )
        )
    )
)
