test/corpus/identifier.scm
================================================================================
Identifier with astral-plane start (U+1D49C MATHEMATICAL SCRIPT CAPITAL A)
================================================================================

auto 𝒜 = 1;

--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    variable: (identifier)
    value: (int_literal)))

================================================================================
Identifier with astral-plane start (U+20000 CJK Unified Ideograph Ext B)
================================================================================

int 𠀀 = 2;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (type
      (int))
    (declarator
      (identifier)
      (int_literal))))

================================================================================
Identifier with astral-plane continue character
================================================================================

auto a𝒜b = 3;

--------------------------------------------------------------------------------

(source_file
  (auto_declaration
    (storage_class
      (auto))
    variable: (identifier)
    value: (int_literal)))
