test/corpus/module.txt
==================
Module declaration
==================
module test.blah.bah;
---
(source_file (module
    (module_declaration (module_fqn (identifier) (identifier) (identifier)))))

==================
Module deprecated
==================
deprecated module test.blah.bah;
---
(source_file (module
    (module_declaration (deprecated_attribute) (module_fqn (identifier) (identifier) (identifier)))))

==================
Module deprecated reason
==================
deprecated ("it is too old") module test.blah.bah;
---
(source_file (module
    (module_declaration (deprecated_attribute (string_literal)) (module_fqn (identifier) (identifier) (identifier)))))

==================
Module at-attribute
==================
@uda module test.blah.bah;
---
(source_file (module
    (module_declaration (at_attribute (identifier)) (module_fqn (identifier) (identifier) (identifier)))))

==================
Module at-attribute parameter
==================
@uda("something") module test.blah.bah;
---
(source_file (module
    (module_declaration (at_attribute (identifier) (string_literal)) (module_fqn (identifier) (identifier) (identifier)))))
