test/corpus/struct.txt
==================
Empty struct
==================

struct s {}

---
(source_file (module (struct_declaration (identifier) (aggregate_body))))


==================
Struct field
==================

struct s {
	int x;
}

---
(source_file (module (struct_declaration (identifier)
	(aggregate_body (var_declarations (builtin_type) (var_declarator (identifier))))
)))

==================
Struct fields
==================

struct s {
	int x;
	int y;
}

---
(source_file (module (struct_declaration (identifier)
	(aggregate_body
		(var_declarations (builtin_type) (var_declarator (identifier)))
		(var_declarations (builtin_type) (var_declarator (identifier)))
	)
)))

==================
Auto anonymous initialization
==================

/*
 * this is indistinguishable from class, union, enum, etc.
 */
auto s = { 0, "x" };

---
(source_file (comment) (module (var_declarations
	(auto_declaration
		(storage_class)
		(identifier)
		(aggregate_initializer
			(member_initializer (int_literal))
			(member_initializer (string_literal))
		)
	)
)))

==================
Anonymous trailing comma initialization
==================

auto s = { 0, "x", };

---
(source_file (module (var_declarations
	(auto_declaration
		(storage_class)
		(identifier)
		(aggregate_initializer
			(member_initializer (int_literal))
			(member_initializer (string_literal))
		)
	)
)))

==================
Named field initialization
==================

/*
 * this is indistinguishable from class, union, enum, etc.
 */
auto s = { zero: 0, name: "x" };

---
(source_file (comment) (module (var_declarations
	(auto_declaration
		(storage_class)
		(identifier)
		(aggregate_initializer
			(member_initializer (identifier) (int_literal))
			(member_initializer (identifier) (string_literal))
		)
	)
)))

==================
Named field trailing comma initialization
==================

/*
 * this is indistinguishable from class, union, enum, etc.
 */
auto s = { zero: 0, name: "x", };

---
(source_file (comment) (module (var_declarations
	(auto_declaration
		(storage_class)
		(identifier)
		(aggregate_initializer
			(member_initializer (identifier) (int_literal))
			(member_initializer (identifier) (string_literal))
		)
	)
)))

